# smart-garland

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  CMakeLists.txt  Containerfile  MODULE.bazel  Makefile  compose.yaml  partitions.csv  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
docs/: architecture.md  research-rust-matter-thread.md
docs/decisions/: 001-matter-sdk.md  002-thread-config.md  003-esp-matter-migration.md  README.md
firmware/: BUILD.bazel  CMakeLists.txt  Cargo.toml  Kconfig.projbuild  build.rs  idf_component.yml  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.c6_thread  sdkconfig.defaults.h2_thread
firmware/.cargo/: config.toml
firmware/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_matter.cpp  app_priv.h
firmware/src/: led.rs  main.rs  matter.rs  thread.rs
main/: CMakeLists.txt  app_driver.cpp  app_driver.h  app_main.cpp  idf_component.yml
scripts/: dev.sh
tools/esp_idf/: BUILD.bazel  defs.bzl
