[package]
name = "smart-garland"
version = "0.1.0"
edition = "2024"
rust-version = "1.86.0"
license = "MIT"
description = "Matter-over-Thread smart garland for ESP32-C6/H2"

[dependencies]
# ESP32-C6 HAL
esp-hal = { version = "1", features = ["esp32c6", "unstable", "log-04"] }
esp-rtos = { version = "0.2", features = ["esp32c6", "embassy", "esp-radio"] }
esp-println = { version = "0.14", features = ["esp32c6", "log-04"] }
esp-backtrace = { version = "0.16", features = ["esp32c6", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32c6"] }
esp-alloc = "0.9"

# Radio: IEEE 802.15.4 (Thread) + BLE (commissioning)
esp-radio = { version = "0.17", features = ["esp32c6", "unstable", "ieee802154", "ble"] }

# Matter + Thread + BLE stack (fork with rx_on_when_idle fix)
# PR: https://github.com/sysgrok/rs-matter-embassy/pull/30
rs-matter-embassy = { git = "https://github.com/lexfrei/rs-matter-embassy", branch = "feat/enable-rx-on-when-idle", features = ["esp", "log", "openthread"] }

# Embassy async runtime (versions must match rs-matter-embassy)
embassy-executor = { version = "0.9", features = ["arch-riscv32"] }
embassy-time = "0.5"

# Logging
log = "0.4"

# Utilities
static_cell = "2.1"
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }

[lints.rust]
dead_code = "allow"

[profile.release]
opt-level = "s"
lto = "fat"

[profile.dev]
opt-level = 1

[patch.crates-io]
# Required by rs-matter-embassy - use git versions
rs-matter = { git = "https://github.com/sysgrok/rs-matter", branch = "next" }
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack.git", branch = "next" }
# Fork with set_link_mode for rx_on_when_idle support
# PR: https://github.com/esp-rs/openthread/pull/50
openthread = { git = "https://github.com/lexfrei/openthread", branch = "feat/add-set-link-mode" }
